fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1244,6 +1244,7 @@ body {
 @media only screen and (min-width: 1000px) {
   .container {
     max-width: var(--desktop-lg);
+    overflow: hidden;
   }
   .tablet-element {
     display: none  !important;
